Working version of lib

--- a/expodify2/Cargo.toml
+++ b/expodify2/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+audiotags = "0.5.0"
+log = "0.4.27"
+rand = "0.9.2"
+
+[dev-dependencies]
+env_logger = "0.11.8"
