--- a/expodify2-cli/Cargo.toml
+++ b/expodify2-cli/Cargo.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+clap = { version = "4.5.49", features = ["derive"] }
+env_logger = "0.11.8"
 expodify2 = { path = "../expodify2" }
+log = "0.4.28"
